k8s/apps/common/echo/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-speed-up
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  hostnames: ["echo.${SECOND_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: echo
          port: 80
          namespace: default
